tests/compile_fail/non_camel_case_type.rs

#![deny(warnings)]

use numid::numid;

numid!(struct test); //~ ERROR type `test` should have an upper camel case name

fn main() {}
 
